--- a/newblog/blog_11.html
+++ b/newblog/blog_11.html
@@ -17,34 +17,35 @@
     <body class="d-flex flex-column">
         <main class="flex-shrink-0">
             <!-- Navigation-->
+       <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container px-5">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="/dist/index.html">דף הבית</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/dist/about.html">עלינו</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/dist/contact.html">צור קשר</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/dist/pricing.html">מחירים</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/dist/faq.html">מידע נוסף</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/index.html">דף הבית</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/about.html">עלינו</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/contact.html">צור קשר</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/pricing.html">מחירים</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/faq.html">מידע נוסף</a></li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">בלוג</a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
-                                    <li><a class="dropdown-item" href="/dist/blog-home.html">בלוג - דף הבית</a></li>
-                                    <li><a class="dropdown-item" href="/dist/blog-post.html">פוסטים</a></li>
+                                    <li><a class="dropdown-item" href="/blog-home.html">בלוג - דף הבית</a></li>
+                                    <li><a class="dropdown-item" href="/blog-post.html">פוסטים</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">תיק עבודות</a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
-                                    <li><a class="dropdown-item" href="/dist/portfolio-overview.html">צפה בתוצרים שלנו</a></li>
-                                    <li><a class="dropdown-item" href="/dist/portfolio-item.html">להקת אהלן </a></li>
+                                    <li><a class="dropdown-item" href="/portfolio-overview.html">צפה בתוצרים שלנו</a></li>
+                                    <li><a class="dropdown-item" href="/portfolio-item.html">להקת אהלן </a></li>
                                 </ul>
                             </li>
                         </ul>
                     </div>
                 </div>
-                <a class="navbar-brand" href="/dist/index.html"><img src="/dist/assets/LOGO33 (1).png" Id="Logo" alt=""></a>
+                <a class="navbar-brand" href="/index.html"><img src="/assets/LOGO33 (1).png" Id="Logo" alt=""></a>
             </nav>
             <!-- Page Content-->
             <section class="py-5">
