--- a/blog-home.html
+++ b/blog-home.html
@@ -60,7 +60,7 @@
     <script>
 document.addEventListener("DOMContentLoaded", function () {
     // שינוי הנתיב לכתובת URL של השרת שלך כאן
-    fetch('blog.json')
+    fetch('./blog.json')
     .then(response => response.json())
     .then(blogsData => {
         // טעינת הבלוגים לתוך תצוגת הדף
