--- a/blog-home.html
+++ b/blog-home.html
@@ -74,8 +74,10 @@ document.addEventListener("DOMContentLoaded", function () {
             // שימוש במספר שב-JSON כדי ליצור קישור לבלוג המתאים
             var blogLink = `newblog/blog_${blog.blog_number}.html`;
             blogElement.innerHTML = `
-                <h2 class="blog-title">${blog.title}</h2>
-                <p class="blog-summary">${blog.summary}</p>
+                <h2 class="blog-title">${blog.description}</h2>
+                <p class="blog-summary">${blog.content}</p>
+                                <p class="blog-summary">מחבר :${blog.author} </p>
+
                 <a href="${blogLink}" class="read-more">קרא עוד</a>
             `;
             blogContainer.appendChild(blogElement);
@@ -117,31 +119,10 @@ document.addEventListener("DOMContentLoaded", function () {
                 <div class="container px-5">
                     <div class="row gx-5">
                         <div class="col-xl-8">
-                            <h2 class="fw-bolder fs-5 mb-4">News</h2>
+                            <h2 class="fw-bolder fs-5 mb-4">הבלוג שלנו</h2>
                                          <!-- קוד HTML של תצוגת הבלוגים -->
                 <div id="bzlogContainer"></div>
-            
-                            <!-- News item-->
-                            <div class="mb-4">
-                                <div class="small text-muted">May 12, 2023</div>
-                                <a class="link-dark" href="#!"><h3>Start Bootstrap releases Bootstrap 5 updates for templates and themes</h3></a>
-                            </div>
-                            <!-- News item-->
-                            <div class="mb-5">
-                                <div class="small text-muted">May 5, 2023</div>
-                                <a class="link-dark" href="#!"><h3>Bootstrap 5 has officially landed</h3></a>
-                            </div>
-                            <!-- News item-->
-                            <div class="mb-5">
-                                <div class="small text-muted">Apr 21, 2023</div>
-                                <a class="link-dark" href="#!"><h3>This is another news article headline, but this one is a little bit longer</h3></a>
-                            </div>
-                            <div class="text-end mb-5 mb-xl-0">
-                                <a class="text-decoration-none" href="#!">
-                                    More news
-                                    <i class="bi bi-arrow-right"></i>
-                                </a>
-                            </div>
+                            
                         </div>
                         <div class="col-xl-4">
                             <div class="card border-0 h-100">
