--- a/newblog/blog_4.html
+++ b/newblog/blog_4.html
@@ -132,7 +132,7 @@
                 <!-- Post header-->
                 <header class="mb-4">
                   <!-- Post title-->
-                  <h1 class="fw-bolder mb-1">קידום אתרים</h1>
+                  <h1 class="fw-bolder mb-1">קידום אתרים בגוגל</h1>
                   <!-- Post meta content-->
                   <div class="text-muted fst-italic mb-2">April 06, 2024</div>
                   <!-- Post categories-->
@@ -159,74 +159,84 @@
                 <section class="mb-5">
                   <div class="col-md-10 col-lg-8 col-xl-7">
                     <p>
-                      <strong>קידום אתרים</strong> הוא תהליך המבוצע על מנת לשפר
-                      את דירוג האתר בתוצאות החיפוש האורגניות של מנועי החיפוש כמו
-                      גוגל. המטרה העיקרית של קידום אתרים היא להביא תעבורת
-                      איכותית לאתר ולהגביר את הנראות שלו בתוצאות החיפוש.
+                      <strong>קידום אתרים בגוגל</strong> הוא תהליך מרתק שמטרתו
+                      לשפר את מעמד האתר בתוצאות החיפוש האורגניות של גוגל. בכדי
+                      לשפר את מיקום האתר בתוצאות החיפוש של גוגל, יש להתמקד בכמה
+                      גורמים מרכזיים:
+                    </p>
+
+                    <ol>
+                      <li>
+                        <strong>מחקר מילות מפתח:</strong> חשוב לבחור מילות מפתח
+                        רלוונטיות לתחום העיסוק שלך ולאתר בתכנים המתאימים למילות
+                        המפתח האלו.
+                      </li>
+                      <li>
+                        <strong>אופטימיזציה טכנית:</strong> וודא שהאתר שלך מקיים
+                        את כל העקרונות של אופטימיזציה טכנית כגון זמני טעינה
+                        מהירים, אתר נגישות ומבנה קוד תקני.
+                      </li>
+                      <li>
+                        <strong>תוכן איכותי ומקורי:</strong> כתוב תוכן מעניין,
+                        מידעי ורלוונטי המעורר עניין ומעיר דיון בקרב הגולשים.
+                      </li>
+                      <li>
+                        <strong>לינקים חיצוניים:</strong> קידום אתר באמצעות
+                        קידום דף הבית של האתר במנועי חיפוש דורש להנחת קישורים
+                        מאתרים אחרים.
+                      </li>
+                      <li>
+                        <strong>שימוש במדיה חברתית:</strong> שיתוף תוכן ברשתות
+                        החברתיות גם יכול לתרום לקידום האתר במנועי החיפוש.
+                      </li>
+                    </ol>
+
+                    <p>
+                      כדי לשפר את מעמד האתר שלך בתוצאות החיפוש של גוגל, כדאי
+                      לעבוד באופן עקרוני ולהשקיע בקידום אורגני באמצעות הגיוס של
+                      משאבים וידע מקצועי רלוונטי.
                     </p>
 
                     <p>
-                      קיימות מספר אסטרטגיות לקידום אתרים, הן באופן אורגני והן
-                      באופן תשלומי:
-                    </p>
-
-                    <ul>
-                      <li>
-                        <strong>אופטימיזציה למנועי חיפוש (SEO):</strong> כולל את
-                        השימוש במילות מפתח רלוונטיות, יצירת תוכן איכותי ומקורי,
-                        בניית קישורים חיצוניים ופנימיים, ובניית אתר ברמה טכנית
-                        סבירה.
-                      </li>
-                      <li>
-                        <strong>שיווק בתוכן (Content Marketing):</strong> פרסום
-                        תוכן איכותי ועשיר שמעניין את הקהל ומוביל אותם לאתר.
-                      </li>
-                      <li>
-                        <strong
-                          >שיווק במדיה חברתית (Social Media Marketing):</strong
-                        >
-                        שימוש ברשתות חברתיות לקידום ושיווק של האתר.
-                      </li>
-                      <li>
-                        <strong>מודעות במנועי חיפוש (SEM):</strong> בניית מודעות
-                        ב-Google AdWords ובשימוש בכלים פרסום פלא.
-                      </li>
-                      <li>
-                        <strong>בניית קישורים (Link Building):</strong> יצירת
-                        קישורים חיצוניים לאתר מאתרים אחרים באינטרנט.
-                      </li>
-                    </ul>
-
-                    <p>
-                      כדי להצליח בקידום אתרים, חשוב לשלב את כלי השיווק השונים
-                      באופן משולב ולהתעדכן בשינויים באלגוריתמים של מנועי החיפוש.
-                      אכן, קידום אתרים הוא תהליך רב תחומי ודורש הבנה טובה של
-                      עקרונות ה-SEO והפרסום באינטרנט.
+                      קידום אתרים בשנת 2024 הוא תהליך חשוב עבור כל אתר כדי לשפר
+                      את נראותו בתוצאות החיפוש האורגניות של מנועי חיפוש כמו
+                      גוגל. הקידום האורגני מתבצע באמצעות שימוש בתגיות מתאימות
+                      ותוכן איכותי המתאר את התוכן של האתר ומשפר את איכותו
+                      ואמינותו.
                     </p>
 
                     <p>
-                      <strong>קידום אתרים בשנת 2024</strong> הוא תחום חשוב ומרתק
-                      בעולם הדיגיטלי. כדי להצליח בקידום אתרים בשנת 2024, עליך
-                      להיות עדכני עם הטכנולוגיות והטרנדים החדשים בעולם האינטרנט.
+                      אחת מהמערכות החשובות בקידום אתרים היא יצירת תוכן איכותי
+                      המכיל מילות מפתח רלוונטיות לתחום העיסוק של האתר. כאשר תוכן
+                      זה מותאם כראוי ומותיר את חותמו בצורה רלוונטית, האתר עשוי
+                      לזכות בדירוג גבוה יותר בתוצאות החיפוש.
                     </p>
 
-                    <ul>
-                      <li>אופטימיזציה למנועי חיפוש (SEO)</li>
-                      <li>שיווק במדיה חברתית</li>
-                      <li>קידום בתשלום (SEM)</li>
-                      <li>בניית ממשק משתמש משופר (UI/UX)</li>
-                      <li>ניתוח נתונים ומדידה</li>
-                      <li>יצירת תוכן איכותי</li>
-                      <li>שימוש בטכניקות AI ומאשינג לשיפור תוצאות</li>
-                      <li>ניהול קמפיינים בצורה אפקטיבית</li>
-                      <li>שיפור ניתוב וניווט באתר</li>
-                    </ul>
+                    <p>
+                      כדי להעלות את האתר במדדי החיפוש, כדאי לשקול גם אסטרטגיות
+                      שונות נוספות, כגון בניית קישורים חיצוניים מאתרים איכותיים
+                      שיפנו לאתר שלך, שיפור ביצועים, השקעה בחווית המשתמש ועוד.
+                    </p>
 
                     <p>
-                      קידום אתרים (SEO) הוא תהליך שבו מנסים לשפר את המיקום של
-                      אתר בתוצאות החיפוש האורגניות במנועי חיפוש כמו גוגל. קידום
-                      אתר בפייסבוק הוא חשוב למספר סיבות, כולל נגישות, שיווק
-                      ממוקד, חשיפה, חיבור עם הקהל, וניתוח נתונים.
+                      בנוסף, שימוש בכלים טכנולוגיים מתקדמים נוספים יכול לעזור
+                      בקידום האתר ובשיפור הנראות שלו ברשת. בחירת חברת פיתוח
+                      אתרים מקצועית ומנוסה יכולה להבטיח תוצאות מרשימות בתהליך
+                      הקידום האורגני של האתר.
+                    </p>
+
+                    <p>
+                      לסיכום, קידום אתרים בשנת 2024 מחייב תכנון ויישום אסטרטגייה
+                      מורכבת המשלבת יכולות טכנולוגיות, איכות תוכן וביצועים
+                      טובים, כדי להבטיח את עלייתו במדדי החיפוש ולהגיע לקהל רחב
+                      ורלוונטי.
+                    </p>
+
+                    <p>
+                      קידום אתרים הוא תהליך שבמהלכו משתמשים בשיטות שונות על מנת
+                      לשפר את דירוג האתר במנועי חיפוש כגון גוגל. קידום אתר
+                      בפייסבוק הוא חלק חשוב מאסטרטגיית השיווק הדיגיטלי של כל אתר
+                      באינטרנט.
                     </p>
                   </div>
                 </section>
@@ -287,7 +297,7 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="/js/scripts.js"></script>
+    <script src="js/scripts.js"></script>
     <link href="/css/styles.css" rel="stylesheet" />
   </body>
 </html>
