--- a/blog-home.html
+++ b/blog-home.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="/css/styles.css" rel="stylesheet" />
   </head>
   <body class="d-flex flex-column">
     <main class="flex-shrink-0">
