--- a/blog-home.html
+++ b/blog-home.html
@@ -17,7 +17,6 @@
       rel="stylesheet"
     />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body class="d-flex flex-column">
     <main class="flex-shrink-0">
@@ -218,5 +217,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="/js/scripts.js"></script>
+    <link href="/css/styles.css" rel="stylesheet" />
   </body>
 </html>
